# enery-prediction-analysis

./: pyproject.toml
data/: consumption_cleaned.csv  consumption_data.xlsx
golibe_project/: eda.html  eda.ipynb  main.ipynb  main.py
golibe_project/.ipynb_checkpoints/: main-checkpoint.ipynb
